Scanner(Done): Identifiers and keywords
Signed-off-by: Barak Korren <barak.korren@gmail.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,9 @@
   "C_Cpp_Runner.useAddressSanitizer": false,
   "cSpell.words": [
     "clox",
+    "eturn",
+    "hile",
+    "uper",
     "Wunused"
-]
+  ]
 }
